[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/hud.gd" id="2_0"]
[ext_resource type="Script" path="res://scripts/vision_pane.gd" id="3_0"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("2_0")

[node name="Panel" type="Panel" parent="."]
offset_left = 0.0
offset_top = 0.0
offset_right = 1280.0
offset_bottom = 64.0

[node name="ScoreLabel" type="Label" parent="Panel"]
offset_left = 540.0
offset_top = 12.0
offset_right = 740.0
offset_bottom = 52.0
text = ""

[node name="InfoLabel" type="Label" parent="Panel"]
offset_left = 20.0
offset_top = 12.0
offset_right = 520.0
offset_bottom = 52.0
text = "Episode: 0  Time: 0.0s"

[node name="HiderPane" type="Control" parent="."]
script = ExtResource("3_0")
offset_left = 20.0
offset_top = 680.0
offset_right = 320.0
offset_bottom = 1020.0

[node name="SeekerPane" type="Control" parent="."]
script = ExtResource("3_0")
offset_left = 960.0
offset_top = 680.0
offset_right = 1260.0
offset_bottom = 1020.0
